--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     font-family: Verdana, sans-serif;
     color: var(--text-color);
+    line-height: 1.5em;
     background: #fff;
     padding-bottom: 80px;
 }
