--- a/src/scss/patterns/_modal-demo.scss
+++ b/src/scss/patterns/_modal-demo.scss
@@ -9,30 +9,30 @@ x-modal {
     visibility: hidden;
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-}
 
-x-modal[active] {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1.0);
-    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
+    &[active] {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(1.0);
+        transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+    }
 
-x-modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 1rem 1.5rem;
-    width: 24rem;
-    border-radius: 0.5rem;
-    display: flex;
-    justify-content: space-between;
-}
+    x-modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        padding: 1rem 1.5rem;
+        width: 24rem;
+        border-radius: 0.5rem;
+        display: flex;
+        justify-content: space-between;
+    }
 
-x-modal-dismiss {
-    cursor: pointer;
-    border: 1px solid black;
-    padding: 4px;
+    x-modal-dismiss {
+        cursor: pointer;
+        border: 1px solid black;
+        padding: 4px;
+    }
 }
