remove tabsDemo class for now

--- a/src/templates/pages/web-components/tabs.html.twig
+++ b/src/templates/pages/web-components/tabs.html.twig
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% set tabDemo %}
-<x-tabs class="tabsDemo">
+<x-tabs>
   <x-tab-list>
     <x-tab>Tab 1</x-tab>
     <x-tab selected>Tab 2</x-tab>
