note that keyboard is done for tabs

--- a/src/templates/pages/web-components/tabs.html.twig
+++ b/src/templates/pages/web-components/tabs.html.twig
@@ -52,7 +52,7 @@
     Limiting scope also allowed me to focus on supporting the <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/tab_role#example">ARIA specification for tabs</a>.
   </p>
   <p>
-    Besides the expected ARIA attribute updates, the following is the component behavior:
+    Besides the expected ARIA attribute updates and keyboard controls, the following is the component behavior:
   </p>
   <ul>
     <li>
@@ -69,7 +69,6 @@
     There's a few features I still need to add
   </p>
   <ul>
-    <li>Keyboard controls</li>
     <li>
       Support for dynamically adding and removing <code>Tabs</code> and <code>TabPanels</code>.
       I haven't encountered a use case for this, but it might be fun to add someday.
