--- a/src/templates/pages/web-components.html.twig
+++ b/src/templates/pages/web-components.html.twig
@@ -17,10 +17,9 @@
         Lately I have been interested in <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components">Web Components</a>.
         Web Components are native to modern browsers; there are no libraries, frameworks, or build tools required.
         Web Components can be used by any other framework, and as <a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_custom_elements">custom elements</a> they can be maniputed by vanilla Javascript like any native element.
-        For folks with <em>framework fatigue</em>, even from within frameworks (class components in React, Vue 1/2, Angular 1), I think Web Components offer refreshing longevity.
     </p>
     <p>
-        Below are toy versions of components that only encapsulate <em>behavior</em>.
+        Below are some of my attempts at creating components that only encapsulate <em>behavior</em>.
         They can then be 100% styled by the project that uses them.
     </p>
 
