--- a/src/templates/pages/web-components/dropdown.html.twig
+++ b/src/templates/pages/web-components/dropdown.html.twig
@@ -28,6 +28,9 @@
 
 {% block main %}
   <h2>Dropdown</h2>
+  <h3>Components</h3>
+  <p>Work in progress...</p>
+  <h3>Demo</h3>
   <x-code>{{ dropdownDemo|e }}</x-code>
   <x-code>{% include 'patterns/_dropdown-demo.scss' %}</x-code>
   {{ dropdownDemo }}
