--- a/src/templates/pages/web-components/modal.html.twig
+++ b/src/templates/pages/web-components/modal.html.twig
@@ -25,6 +25,9 @@
 
 {% block main %}
   <h2>Modal</h2>
+  <h3>Components</h3>
+  <p>Work in progress...</p>
+  <h3>Demo</h3>
   <x-code>{{ modalDemo|e }}</x-code>
   <x-code>{% include 'patterns/_modal-demo.scss' %}</x-code>
   {{ modalDemo }}
