--- a/src/templates/pages/web-components.html.twig
+++ b/src/templates/pages/web-components.html.twig
@@ -24,6 +24,7 @@
     </p>
 
     <a href="/web-components/tabs" class="webComponentLink">Tabs</a>
+    <a href="/web-components/anchor-sim" class="webComponentLink">Anchor Sim</a>
     <a href="/web-components/modal" class="webComponentLink">Modal</a>
     <a href="/web-components/dropdown" class="webComponentLink">Dropdown</a>
 {% endblock %}
