--- a/src/templates/pages/web-components.html.twig
+++ b/src/templates/pages/web-components.html.twig
@@ -25,6 +25,7 @@
 
     <a href="/web-components/tabs" class="webComponentLink">Tabs</a>
     <a href="/web-components/link-like" class="webComponentLink">Link Like</a>
+    <a href="/web-components/img-fallback" class="webComponentLink">Img Fallback</a>
     <a href="/web-components/modal" class="webComponentLink">Modal</a>
     <a href="/web-components/dropdown" class="webComponentLink">Dropdown</a>
 {% endblock %}
