--- a/src/templates/pages/web-components/link-like.html.twig
+++ b/src/templates/pages/web-components/link-like.html.twig
@@ -30,10 +30,12 @@
     An <code>Link Like</code> is a generic container component with attributes and a click handler that behave exactly as a normal anchor tag.
     This can be useful for SEO purposes if you want content to behave as a link without it being possibly seen or indexed by search engines.
     The <code>Link Like</code> also implements the <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/link_role">ARIA "link" role</a>.
-    I had trouble thinking of a good name for this component, but I'm open to ideas!
+  </p>
+  <p>
+    The attribute interface for <code>&lt;link-like&gt;</code> is identical to that of an <code>&lt;a&gt;</code>, including <code>href</code> and <code>target</code>.
   </p>
 
-  <x-code language="javascript">{% include 'components/link-like.js' %}</x-code>
+  <x-code language="javascript">{% apply escape %}{% include 'components/link-like.js' %}{% endapply %}</x-code>
 
   <h3>Demo</h3>
 
