--- a/src/templates/pages/web-components/link-like.html.twig
+++ b/src/templates/pages/web-components/link-like.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
-  {% include 'css/tabs.css' %}
+  {% include 'css/link-like.css' %}
 {% endblock %}
 
 {% block js %}
