--- a/src/templates/pages/web-components.html.twig
+++ b/src/templates/pages/web-components.html.twig
@@ -23,6 +23,7 @@
         They can then be 100% styled by the project that uses them.
     </p>
 
+    <a href="/web-components/button-role" class="webComponentLink">Button Role</a>
     <a href="/web-components/tabs" class="webComponentLink">Tabs</a>
     <a href="/web-components/link-like" class="webComponentLink">Link Like</a>
     <a href="/web-components/img-fallback" class="webComponentLink">Img Fallback</a>
