--- a/src/templates/pages/web-components/button-role.html.twig
+++ b/src/templates/pages/web-components/button-role.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base-layout.html.twig' %}
 
 {% block inlineCss %}
-  {% include 'css/link-like.css' %}
+  {% include 'css/button-role.css' %}
 {% endblock %}
 
 {% block js %}
@@ -30,7 +30,7 @@
   <h3>Component</h3>
   <p>
     A <code>&lt;button-role&gt;</code> is another <em>element decorator</em>.
-    An element decorator augments the behavior of the element it decorates without interfering with styles or layout by using <code>display: contents;</code>.
+    An element decorator augments the behavior of the element it decorates without interfering with styles or layout by using <code>display: contents</code>.
   </p>
   <p>
     <code>&lt;button-role&gt;</code> ensures the decorated element implements the <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/button_role">button role spec</a>,
